# ECR_Tracking_CSRT_Result

./: CMakeLists.txt  README.md
include/config/: Config.hpp
include/detection/: Detection.hpp  NCNNSsdDetector.hpp  OnnxSsdDetector.hpp  StaticBoxDetector.hpp  TemplateMatcherDetector.hpp
include/pipeline/: PipelineOutput.hpp  TrackingPipeline.hpp  Types.hpp
include/rescue/: RescueStrategy.hpp
include/smoothing/: BoxKalmanFilter.hpp
include/tracking/: CsrtTracker.hpp  Quality.hpp
src/: BoxKalmanFilter.cpp  CsrtTracker.cpp  NCNNSsdDetector.cpp  OnnxSsdDetector.cpp  Quality.cpp  RescueStrategy.cpp  StaticBoxDetector.cpp  TemplateMatcherDetector.cpp  TrackingPipeline.cpp  main.cpp  otb_evaluator.cpp
